--- a/anbox-launchers.service
+++ b/anbox-launchers.service
@@ -5,7 +5,7 @@ After=anbox-session-manager.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/share/anbox/anbox-launchers
+ExecStart=@PREFIX@/anbox/anbox-launchers
 
 [Install]
 WantedBy=graphical-session.target
